# Applied-Convolutional-Neural-Network-CNN-model-as-the-classifier-for-surface-defects-detection

./: README.md
EgienFace/: .main.cpp.swp  CMakeLists.txt  main.cpp
orl_faces/: image.csv  image_II.csv  test.csv
recFace_project/: main.cpp
videoCapture/: CMakeLists.txt  main.cpp
